feat: added config solution
